[dev]: added new apis